--- a/lesson5/pom.xml
+++ b/lesson5/pom.xml
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.geekbrains</groupId>
-    <artifactId>preparing-java-interview</artifactId>
+    <artifactId>lesson5</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+
+    <name>lesson5</name>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -26,5 +27,4 @@
             <version>2.1.214</version>
         </dependency>
     </dependencies>
-    
 </project>
