--- a/lesson6/pom.xml
+++ b/lesson6/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>lesson6</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -21,5 +22,18 @@
     </dependencies>
     <build>
         <finalName>lesson6</finalName>
+
+        <plugins>
+            <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                    <url>http://localhost:8080/manager/text</url>
+                    <server>TomcatServer</server>
+                    <path>/lesson6</path>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
