Lesson 6 - Complete task

--- a/lesson6/pom.xml
+++ b/lesson6/pom.xml
@@ -31,7 +31,7 @@
                 <configuration>
                     <url>http://localhost:8080/manager/text</url>
                     <server>TomcatServer</server>
-                    <path>/lesson6</path>
+                    <path>/</path>
                 </configuration>
             </plugin>
         </plugins>
